# Raytracer

./: README.md
raytracer/: CMakeLists.txt  camera_options.h  color_transformation.h  commons.hpp  image.h  pixel.h  raytracer.h  readme.md  render_options.h  test.cpp  view.h
raytracer-debug/: CMakeLists.txt  readme.md  test.cpp
raytracer-debug/tests/box/: CornellBox-Sphere.mtl
raytracer-debug/tests/classic_box/: CornellBox-Original.mtl
raytracer-debug/tests/deer/: CERF_Free.mtl
raytracer-debug/tests/triangle/: scene.mtl
raytracer-geom/: CMakeLists.txt  geometry.h  intersection.h  ray.h  readme.md  sphere.h  test.cpp  triangle.h  vector.h
raytracer-reader/: CMakeLists.txt  light.h  material.h  object.h  reader.h  readme.md  scene.h  test.cpp
raytracer-reader/tests/box/: CornellBox-Sphere.mtl
raytracer/tests/distorted_box/: CornellBox-Original.mtl
raytracer/tests/mirrors/: materials.mtl
raytracer/tests/shading_parts/: scene.mtl
